# cds-healpix-python

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  MANIFEST.in  MATURIN-NOTICE.md  README.md  api.html  appveyor.yml  conftest.py  contribute.html  deploy.sh  elliptic_search.py  genindex.html  healpix_win.py  index.html  install.html  install_cargo.sh  install_rust.sh  objects.inv  py-modindex.html  py3_lonlat_to_healpix.py  pyproject.toml  readthedocs.yml  requirements-bench.txt  requirements-dev.txt  requirements-doc.txt  requirements.txt  search.html  searchindex.js  setup.py  setup.py.bak  test_polygon_search.py  test_python2.py  testing.sh  testing_py2_ubuntu_32.sh  testing_py3_ubuntu_32.sh
.github/workflows/: bench.yml  build_test_and_release.yml  deploy.yml  deploy_aarch64.yml  deploy_doc.yml  deploy_linux32.yml  deploy_pypi.yml  emscripten.yml  test.yml
_collections/notebooks/: coordinate_conversion.html  external_neighbours.html
_downloads/3a22ee0a74a29cb33bebc41c6c7344e1/: box_search.py
_downloads/6df17e2cad2d73c0eeb18d25b463dae3/: healpix_to_lonlat.py
_sources/: api.rst.txt  contribute.rst.txt  index.rst.txt  install.rst.txt
_sources/examples/: examples.rst.txt
_sources/stubs/: cdshealpix.nested.bilinear_interpolation.rst.txt  cdshealpix.nested.cone_search.rst.txt  cdshealpix.nested.healpix_to_lonlat.rst.txt  cdshealpix.nested.healpix_to_xy.rst.txt  cdshealpix.nested.lonlat_to_healpix.rst.txt  cdshealpix.nested.lonlat_to_xy.rst.txt  cdshealpix.nested.skycoord_to_healpix.rst.txt  cdshealpix.nested.vertices.rst.txt  cdshealpix.ring.healpix_to_lonlat.rst.txt  cdshealpix.ring.healpix_to_skycoord.rst.txt  cdshealpix.ring.lonlat_to_healpix.rst.txt  cdshealpix.ring.vertices.rst.txt  cdshealpix.ring.vertices_skycoord.rst.txt
cdshealpix/: __init__.py  bindings.h  bmoc.py  healpix.py  utils.py
cdshealpix/nested/: __init__.py  healpix.py
cdshealpix/ring/: __init__.py  healpix.py
cdshealpix/tests/: test_benchmark_healpix.py  test_healpix.py  test_nested_healpix.py  test_ring_healpix.py
docs/: Makefile  api.rst  conf.py  contribute.rst  index.rst  install.rst  references.bib
docs/examples/: cone_search.py  elliptic_search.py  examples.rst  polygon_search.py
docs/examples/search_methods/: cone_search.py  polygon_search.py  zone_search.py
docs/examples/skymaps/: skymaps.py
docs/stubs/: cdshealpix.from_ring.rst  cdshealpix.nested.elliptical_cone_search.rst  cdshealpix.nested.external_neighbours.rst  cdshealpix.nested.healpix_to_skycoord.rst  cdshealpix.nested.neighbours.rst  cdshealpix.nested.polygon_search.rst  cdshealpix.nested.vertices_skycoord.rst  cdshealpix.nested.xy_to_lonlat.rst  cdshealpix.ring.healpix_to_xy.rst  cdshealpix.ring.skycoord_to_healpix.rst  cdshealpix.to_ring.rst
examples/: cone_search.py  elliptic_search.py  examples.html  polygon_search.py
notebooks/: coordinate_conversion.ipynb  external_edges_cells.ipynb  external_neighbours.ipynb
python/cdshealpix/: __init__.py  utils.py
python/cdshealpix/nested/: healpix.py
python/cdshealpix/ring/: __init__.py  healpix.py
python/cdshealpix/skymap/: skymap.py
python/cdshealpix/tests/: test_benchmark_healpix.py  test_nested_healpix.py  test_ring_healpix.py  test_skymaps.py
src/: lib.rs  skymap_functions.rs
stubs/: cdshealpix.from_ring.html  cdshealpix.nested.bilinear_interpolation.html  cdshealpix.nested.cone_search.html  cdshealpix.nested.elliptical_cone_search.html  cdshealpix.nested.external_neighbours.html  cdshealpix.nested.healpix_to_lonlat.html  cdshealpix.nested.healpix_to_skycoord.html  cdshealpix.nested.healpix_to_xy.html  cdshealpix.nested.lonlat_to_healpix.html  cdshealpix.nested.lonlat_to_xy.html  cdshealpix.nested.neighbours.html  cdshealpix.nested.polygon_search.html  cdshealpix.nested.skycoord_to_healpix.html  cdshealpix.nested.vertices.html  cdshealpix.nested.vertices_skycoord.html  cdshealpix.nested.xy_to_lonlat.html  cdshealpix.ring.healpix_to_lonlat.html  cdshealpix.ring.healpix_to_skycoord.html  cdshealpix.ring.healpix_to_xy.html  cdshealpix.ring.lonlat_to_healpix.html  cdshealpix.ring.skycoord_to_healpix.html  cdshealpix.ring.vertices.html  cdshealpix.ring.vertices_skycoord.html  cdshealpix.to_ring.html
travis/: build_docs.sh  deploy.sh  deploy_doc.sh  testing.sh  testing_py2_ubuntu_32.sh  testing_py3_ubuntu_32.sh
