[package]
name = "cdshealpix"
version = "0.6.5"
authors = ["Matthieu Baumann <matthieu.baumann@astro.unistra.fr>", "F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
description = "Python cdshealpix package wrapping code of the cdshealpix crate"
license = "BSD-3-Clause"
readme = "README.md"
categories = ["algorithms", "science"]
keywords = ["healpix", "astronomy"]
documentation = "https://cds-astro.github.io/cds-healpix-python"
homepage = "https://github.com/cds-astro/cds-healpix-python"
repository = "https://github.com/cds-astro/cds-healpix-python"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "cdshealpix"
crate-type = ["cdylib"]

[dependencies]
healpix = { rev="9d74a9a71057440b035ae1e84d49b99c969d739a", package = "cdshealpix", git = 'https://github.com/cds-astro/cds-healpix-rust' }
rayon = "1.10"

[dependencies.numpy]
version = "0.21"

[dependencies.pyo3]
version = "0.21"
features = ["extension-module"]

[dependencies.ndarray]
version = "0.15"
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features
features = ["rayon"]

